src/popup.css
*,
*::after,
*::before {
  box-sizing: border-box;
}

body {
  width: 350px;
  background-color: #1a243b;
  padding: 15px 25px;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 14px;
}

.header {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-bottom: 15px;
}

.app {
  --color: #eee;

  padding: 20px 30px;
  /*background: ##111827;
  border-radius: 10px;
  box-shadow: -3px -3px 7px #ffffff73, 2px 2px 5px rgba(94, 104, 121, 0.288);*/
  border-radius: 42px;
  background: linear-gradient(145deg, #0f1623, #121a2a);
  box-shadow: 5px 5px 14px #090d15, -5px -5px 14px #192339;
}

.header {
  color: var(--color);
}

.header img {
  margin-right: 5px;
}

h1 {
  font-size: 14px;
  color: var(--color);
  text-transform: uppercase;
  text-align: center;
  margin-block-end: 25px;
}

form {
  width: 100%;
}

.form-control {
  margin-block-end: 40px;
  width: 100%;
  height: 50px;
  position: relative;
}

.form-control > label {
  display: block;
  margin-bottom: 5px;
  color: var(--color);
}

.form-control > input {
  height: 100%;
  width: 100%;
  padding-inline: 20px;
  font-size: 14px;
  outline: none;
  border: none;
  color: var(--color);
  /* background: ##111827;
  border-radius: 25px;
  box-shadow: inset 2px 2px 5px #babecc, inset -5px -5px 10px #ffffff73;*/

  border-radius: 42px;
  background: linear-gradient(145deg, #0f1623, #121a2a);
  box-shadow: 5px 5px 14px #090d15, -5px -5px 14px #192339;
}

select {
  font-size: 14px;
  width: 100%;
  padding: 15px;
  border: none;
  outline: none;
  border-radius: 33px;
  color: var(--color);
  border-radius: 42px;
  background: linear-gradient(145deg, #0f1623, #121a2a);
  box-shadow: 5px 5px 14px #090d15, -5px -5px 14px #192339;
}

.switch-btn-container {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  margin-top: 50px;
}

.switch-btn-container > span {
  margin-right: 10px;
  color: var(--color);
}

.switch-btn {
  width: 30px;
  height: 14px;
  border-radius: 25px;
  border: 1px solid dodgerblue;
  cursor: pointer;
  display: flex;
  align-items: center;
  padding-inline: 2px;
}

.switch-btn__ring {
  width: 8px;
  height: 8px;
  border-radius: 50%;
  border: 1px solid dodgerblue;
  transition: all 0.3s;
}

.switch-btn[data-visibility="public"] .switch-btn__ring {
  transform: translateX(16px);
  background-color: #fff;
}

.switch-btn[data-visibility="private"] .switch-btn__ring {
  transform: none;
}

.visibility-label {
  text-align: right;
  font-size: 12px;
  color: var(--color);
  margin-block-start: 7px;
  margin-block-end: 30px;
}

.submit-btn,
.sign-in-btn {
  width: 100%;
  color: var(--color);
  outline: none;
  border: none;
  border-radius: 5px;
  margin-block-start: 0px;
  cursor: pointer;
  border-radius: 42px;
  background: linear-gradient(145deg, #0f1623, #121a2a);
  box-shadow: 5px 5px 14px #090d15, -5px -5px 14px #192339;
  padding: 17px;
  position: relative;
  transition: transform 0.3s ease-out;
}

.sign-in-btn {
  margin-block: 10px;
}

.submit-btn:hover,
.sign-in-btn:hover {
  transform: translateY(-3px);
}

.submit-btn.loading {
  animation: bubble ease-out 1s both alternate infinite;
}

@keyframes bubble {
  from {
    transform: scale(0.95);
  }

  to {
    transform: scale(1.04);
  }
}

